--- a/main.html
+++ b/main.html
@@ -1,1 +1,11 @@
 <html>
+    <head>
+        <title>Display Hello World</title>
+    </head>
+    <body>
+        <p> Hello World! </p>
+    </body>
+    <footer>
+        <small>&copy: Cpoyright 2019, MayDay Corporation</small>
+    </footer>
+</html>
